--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -1,14 +1,15 @@
 <ion-view view-title="Always Notes">
 	<ion-content ng-controller="ListCtrl">
-		<div class="padding">
-			<a href="#/add" class="button button-block button-calm">Create Note</a>
-		</div>
 		<ion-list>
-		  <ion-item class="item-remove-animate" href="#/edit/{{note.id}}" ng-repeat="note in notes">
+		  <ion-item class="item-remove-animate item-icon-right" href="#/edit/{{note.id}}" ng-repeat="note in notes">
 		    <h2>{{note.title}}</h2>
 		    <p>{{note.description}}</p>
-		    <ion-option-button class="button-assertive" ng-click="remove(note.id)">Delete</ion-option-button>
+		    <i class="icon ion-chevron-right"></i>
+		    <ion-option-button class="button-assertive ion-trash-b icon-left" ng-click="remove(note.id)">Delete</ion-option-button>
 		  </ion-item>
 		</ion-list>
 	</ion-content>
+	<div class="bar bar-footer bar-stable">
+		<a href="#/add" class="button button-calm icon-left ion-compose">Create Note</a>
+	</div>
 </ion-view>
